--- a/src/component/Content/Css/Contact.css
+++ b/src/component/Content/Css/Contact.css
@@ -1,4 +1,4 @@
-/* Contact.css */
+/* Contact.css
 
 .contact-section {
     background-color: #f9f9f9;
@@ -70,4 +70,4 @@
 
 .contact-submit:hover {
     background-color: #e64a19;
-}
+} */
