--- a/src/component/Content/Css/About.css
+++ b/src/component/Content/Css/About.css
@@ -1,7 +1,7 @@
 /* About.css */
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Oooh+Baby&family=Satisfy&display=swap');
 .about-section {
-    margin-top: 130px;
+    margin-top: 120px;
     background-color: #f9f9f9;
     padding: 5px 0;
 }
@@ -36,3 +36,4 @@
     color: #333;
     text-align: justify;
 }
+
