--- a/src/component/Content/Css/Skill.css
+++ b/src/component/Content/Css/Skill.css
@@ -1,39 +1,47 @@
-/* Skills.css */
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Satisfy&display=swap');
 
+/* Other CSS styles */
 .skills-section {
-    background-color: #f9f9f9;
+    background-color: #fcfcfc;
     padding: 5px 0;
 }
 
 .container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 .section-title {
     text-align: center;
     font-size: 36px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .skills-content {
     display: flex;
-    flex-direction: column;
-    /* Align items in a column */
+    justify-content: center;
 }
 
 .skill-item {
-    margin-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
 }
 
-.skill-title {
-    font-size: 24px;
-    margin-bottom: 10px;
+.skill-icon {
+    width: 60px;
+    height: 60px;
+    transition: transform 1000ms;
+    /* Add transition */
 }
 
-.skill-description {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #333;
+.skill-icon:hover {
+    transform: scale(1.5);
+}
+
+.skill-icon {
+    background-color: transparent !important;
 }
