--- a/src/component/Content/Css/Profile.css
+++ b/src/component/Content/Css/Profile.css
@@ -1,8 +1,8 @@
 /* Profile.css */
 
 .profile-section {
-    background-color: #f9f9f9;
-    padding: 5px 0;
+    background-color: #fcfcfc;
+    padding: 50px 0;
 }
 
 .container {
@@ -19,14 +19,8 @@
 
 .profile-content {
     display: flex;
+    flex-direction: column;
     align-items: center;
-}
-
-.profile-picture {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-right: 30px;
 }
 
 .profile-bio {
@@ -34,4 +28,25 @@
     line-height: 1.6;
     color: #333;
     text-align: justify;
+    margin-bottom: 20px;
+    /* Add margin bottom for better spacing */
+}
+
+.profile-links {
+    display: flex;
+    justify-content: center;
+    /* Center items horizontally */
+}
+
+.profile-links a {
+    text-decoration: none;
+    color: #0778b0;
+    margin: 0 30px;
+    font-size: 16px;
+    gap: 70px;
+}
+
+.profile-links a:hover {
+    text-decoration: underline;
+    /* Underline links on hover */
 }
